# CSM-GIAS-Resto-Plus

./: .gitignore  README.md
00_Project_Management/: Decisions.md  Meeting_Notes.md  Milestones.md  PROJECT_PROGRESS.md  Planning.md  Risks.md  Roadmap.md
01_Documentation/: 01_Project_Vision.md  02_Regles_Metier.md  03_Exigences_Fonctionnelles.md  04_Exigences_Non_Fonctionnelles.md  13_Cahier_Des_Charges.md  14_SRS.md
01_Documentation/05_Agile/: 01_User_Stories.md  02_Product_Backlog.md
01_Documentation/07_Database/: Schema_BDD.md
03_Backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
03_Backend/app/: __init__.py  main.py
03_Backend/app/ai/: __init__.py  engine.py
03_Backend/app/api/v1/: __init__.py  audit.py  auth.py  employees.py  face.py  health.py  interns.py  meals.py  qr_codes.py  receptionists.py  reports.py  settings.py  stats.py  users.py  visitors.py
03_Backend/app/core/: __init__.py  config.py  constants.py  dependencies.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py
03_Backend/app/database/: __init__.py  base.py  mixins.py  session.py
03_Backend/app/middlewares/: __init__.py  core.py  security.py
03_Backend/app/models/: __init__.py  admin.py  audit_log.py  base.py  employee.py  face_embedding.py  intern.py  meal.py  meal_category.py  qr_code.py  role.py  setting.py  user.py  visitor.py
03_Backend/app/repositories/: __init__.py  admin.py  audit_repository.py  base.py  employee.py  face_repository.py  intern.py  meal.py  qr_code.py  role.py  setting.py  statistics.py  user.py  visitor.py
03_Backend/app/schemas/: __init__.py  admin.py  audit.py  auth.py  base.py  employee.py  face.py  intern.py  meal.py  pagination.py  qr_code.py  reports.py  response.py  role.py  setting.py  statistics.py  user.py  visitor.py
03_Backend/app/security/: __init__.py  dependencies.py  jwt.py  password.py
03_Backend/app/services/: __init__.py  audit_service.py  auth_service.py  base.py  employee_service.py  face_service.py  intern_service.py  meal_service.py  qr_code_service.py  receptionist_service.py  report_service.py  setting_service.py  user_admin_service.py  visitor_service.py
03_Backend/app/utils/: __init__.py  date_utils.py  image.py  password.py  qr_code.py  validators.py
03_Backend/docs/: API_INTEGRATION.md
03_Backend/migrations/: README.md  env.py
03_Backend/migrations/versions/: 032ceaac0575_create_face_embedding_table.py  032ceaac0576_create_audit_logs_table.py  1a2b3c4d5e6f_create_parametre_table.py  434b6acc2c5f_initial_schema.py  ae9214788096_create_audit_logs_table.py
03_Backend/scripts/: README.md  backfill_user_extensions.py  init.sql  seed.py
03_Backend/tests/: conftest.py  test_auth.py  test_employees.py  test_face.py  test_health.py  test_interns.py  test_meals.py  test_qr_codes.py  test_receptionists.py  test_role_model.py  test_seed.py  test_visitors.py
08_Diagrams/: README.md
09_AI_Prompts/: README.md
mobile_app/: README.md  analysis_options.yaml  analyze_errors.txt  analyze_output.txt  pubspec.yaml
(+262 files in other folders)
