[project]
name = "csm-gias-resto-plus"
version = "1.0.0"
description = "CSM-GIAS Resto+ - Solution Intelligente de Gestion du Restaurant d'Entreprise"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
    { name = "CSM-GIAS Resto+ Team" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "loguru>=0.7.3",
    "python-multipart>=0.0.18",
    "httptools>=0.6.4",
    "qrcode[pil]>=8.2.0",
    "Pillow>=12.0.0",
    "tzdata>=2026.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "watchfiles>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# NOTE: ``I`` (isort) is intentionally excluded — isort handles import
# sorting via ``[tool.isort]`` below.  Including ``I`` here would produce
# noisy conflicts between the two formatters.
select = ["E", "F", "W", "N", "UP", "B", "SIM", "ARG", "PTH", "PD", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/core/exceptions.py" = ["N818"]
"app/api/v1/health.py" = ["B008"]
"app/schemas/response.py" = ["UP017"]
"app/database/mixins.py" = ["UP017"]
"app/api/v1/*.py" = ["B008"]
"app/security/dependencies.py" = ["B008"]
"app/core/dependencies.py" = ["B008"]
"tests/*.py" = ["PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["app"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py", "**/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
no_implicit_optional = true
